# bevy_svg

./: CHANGELOG.md  Cargo.toml  README.md  justfile  sumi.toml
.cargo/: config.toml
examples/2d/: preloading.rs
examples/3d/: multiple_translation.rs  origin_check.rs  twinkle.rs  two_colors.rs
examples/common/: lib.rs
src/: lib.rs  loader.rs  origin.rs  plugin.rs  svg.rs  util.rs
src/render/: mod.rs  plugin.rs  tessellation.rs  vertex_buffer.rs
src/render/svg2d/: mod.rs
src/render/svg3d/: mod.rs
