[package]
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "Load and draw SVG files in Bevy."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "bevy_svg"
readme = "README.md"
repository = "https://github.com/Weasy666/bevy_svg/"
version = "0.17.1"
keywords = ["gamedev", "graphics", "bevy", "svg"]
categories = [
    "game-engines",
    "game-development",
    "graphics",
    "multimedia",
    "rendering",
]
exclude = ["assets", "examples"]
rust-version = "1.88"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite_render",
    "bevy_sprite",
] }
copyless = "0.1"
lyon_path = "1.0"
lyon_tessellation = "1.0"
svgtypes = "0.16"
thiserror = "2.0"
usvg = "0.46"

[dev-dependencies]
bevy = { version = "0.18", default-features = true }

[lints.clippy]
missing_errors_doc = { level = "allow", priority = 100 }     # Frankly, I can't be bothered to write documentation
needless_pass_by_value = { priority = 127, level = "allow" } # Bevy freaks out over references
nursery = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 1 }
type_complexity = "allow"                                    # Bevy queries are inherently complex

#### 2D examples ####
[[example]]
name = "2d_complex_one_color"
path = "examples/2d/complex_one_color.rs"

[[example]]
name = "2d_multiple_translation"
path = "examples/2d/multiple_translation.rs"

[[example]]
name = "2d_origin_check"
path = "examples/2d/origin_check.rs"

[[example]]
name = "2d_preloading"
path = "examples/2d/preloading.rs"

[[example]]
name = "2d_twinkle"
path = "examples/2d/twinkle.rs"

[[example]]
name = "2d_two_colors"
path = "examples/2d/two_colors.rs"

#### 3D examples ####
[[example]]
name = "3d_complex_one_color"
path = "examples/3d/complex_one_color.rs"

[[example]]
name = "3d_multiple_perspective"
path = "examples/3d/multiple_perspective.rs"

[[example]]
name = "3d_origin_check"
path = "examples/3d/origin_check.rs"

[[example]]
name = "3d_multiple_translation"
path = "examples/3d/multiple_translation.rs"

[[example]]
name = "3d_twinkle"
path = "examples/3d/twinkle.rs"

[[example]]
name = "3d_two_colors"
path = "examples/3d/two_colors.rs"
